2011-03-22 Sasa Bojanic <sasaboy@together.at>
   # readregistry.exe replaced with the newer version now comming from its own project TRR (Together Read Registry), version 1.0-1
 
2011-03-16 Sasa Bojanic <sasaboy@together.at>
   # Updated JAR's MANIFEST information

2011-03-07 Sasa Bojanic <sasaboy@together.at>
   # Not packaging Java API documentation into distribution zip/tar.gz/exe/rpm files

2011-03-04 Sasa Bojanic <sasaboy@together.at>
   # Docbook upgraded to version 1.76.1

2011-03-03 Sasa Bojanic <sasaboy@together.at>
   # Occurrence of twe@together.at in various source files changed to twe@togetherteam.co.th

2011-02-24 Sasa Bojanic <sasaboy@together.at>
   # Fixed bug with copying processes/activity sets from "transient" packages
   # Fixed: not creating unnecessary NodeGraphicsInfo element for Pools when process/activity set gets copied
   
2011-02-23 Sasa Bojanic <sasaboy@together.at>
   # The build.debug property removed from build.properties file, new build target "debug" introduced 
     to build TWE JAR files with DEBUG information in the classes
   # The project distribution now also contains debug folder with TWE JAR files that include DEBUG information     

2011-02-22 Sasa Bojanic <sasaboy@together.at>
   # Added "silent" installation possibility

2011-02-20 Sasa Bojanic <sasaboy@together.at>
   # Updated screenshots

2011-02-18 Sasa Bojanic <sasaboy@together.at>
   # Ant libraries upgraded to version 1.8.2 (removed ant-nodeps.jar)
   # Xerces library upgraded to version 2.11.0
   # Commons IO library upgraded to version 2.0.1
   # XML Commons library upgraded to version 1.4_01
   # XML Graphics Commons library upgraded to version 1.4
   # FOP library upgraded to version 1.0
   # iText library upgraded to version 5.0.6
   # Fixed "Save as PDF" action bug
   
2011-02-15 Sasa Bojanic <sasaboy@together.at>
   # jxpdl.jar updated to SVN version 1.0-1 SVNR35